--- a/styles/blog.css
+++ b/styles/blog.css
@@ -37,3 +37,58 @@
     border: none;
 color: #D9D9D9;
 }
+.secondary-title{
+    font-size: 32px;
+    font-weight: 800px;
+    color: #0D1321;
+    text-align: center ;
+}
+.secondary-description{
+    font-size: 16px;
+    color: #0D1321;
+    line-height: 26px;
+    text-align: center;
+}
+.secondary1-title{
+    font-size: 24px;
+    font-weight: 700;
+    color: #0D1321 ;
+}
+.secondary1-description{
+    font-size: 16px;
+    line-height: 26px;
+    color: #0D1321;
+    margin-bottom: 50px;
+}
+.secondary1-btn{
+    font-size: 20px;
+    font-weight: 600;
+    color: #0D1321;
+    border: solid;
+    background-color: white;
+}
+.secion-picture{
+    width: 274.17px;
+    height: 240px;
+  }
+  .banner{
+    display: flex;
+   justify-content: center;
+   align-items: center;
+    margin: 0 35px 0 200px;
+ }
+ .banner-picture{
+    width: 274.17px;
+    height: 240px;
+ }
+ 
+ .secondary-bg{
+  background-color: #ADC8F7;
+ }
+ .main{
+    max-width: 1140px;
+    margin: 0 auto;
+ }
+ .text-position{
+    text-align: center;
+ }
