--- a/styles/blog.css
+++ b/styles/blog.css
@@ -41,13 +41,13 @@ color: #D9D9D9;
     font-size: 32px;
     font-weight: 800px;
     color: #0D1321;
-    text-align: center ;
+     ;
 }
 .secondary-description{
     font-size: 16px;
     color: #0D1321;
     line-height: 26px;
-    text-align: center;
+    ;
 }
 .secondary1-title{
     font-size: 24px;
@@ -92,3 +92,23 @@ color: #D9D9D9;
  .text-position{
     text-align: center;
  }
+ .lang-container{
+    display: flex;
+   gap: 24px;
+   
+  }
+  .langs{
+    padding: 30px;
+    box-shadow:0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 15px;
+  }
+  .langs-html{
+    background-color: #FF4C1E;
+  }
+  .langs-css{
+    background-color: #004CE8;
+  }
+  .langs-js{
+    background-color: #FFDF00;
+
+  }
