--- a/styles/blog.css
+++ b/styles/blog.css
@@ -83,7 +83,7 @@ color: #D9D9D9;
  }
  
  .secondary-bg{
-  background-color: #ADC8F7;
+  background-color: rgba(173, 200, 247, 1);
  }
  .main{
     max-width: 1140px;
@@ -103,12 +103,71 @@ color: #D9D9D9;
     border-radius: 15px;
   }
   .langs-html{
-    background-color: #FF4C1E;
+    background-color: rgba(255, 76, 30, 0.05);
   }
   .langs-css{
-    background-color: #004CE8;
+    background-color: rgba(0, 76, 232, 0.05);
   }
   .langs-js{
-    background-color: #FFDF00;
+    background-color: rgba(255, 223, 0, 0.05);
 
+  }
+  .lang-btn{
+    font-size: 16px;
+    font-weight: 700;
+    color: #0D1321;
+    border: none;
+    text-decoration: underline;
+  }
+  *{
+    margin-bottom: 50px;
+  }
+  .target-container{
+    display: flex;
+    border: 2px solid;
+    border-radius: 10px;
+    padding: 40px;
+    
+  }
+  .terget-img-quantity{
+    width: 94.78px;
+    height: 108px;
+  }
+  .super-container{
+    background-image: url('../assets/handshake.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 10px;
+    border: 2px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
+  .super-content{
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   text-align: center;
+   margin-top: 32px;
+   margin-bottom: 30px
+  }
+  .super-content input{
+    width: 350px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    background-color: #FFFFFF;
+  }
+  #super-btn{
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+  }
+  .footer-container{
+    display: flex;
+    justify-content: space-between;
   }
